@@ -1501,6 +1501,8 @@ AC_CONFIG_FILES([Makefile \
 	  cvs.spec \
 	  diff/Makefile \
 	  doc/Makefile \
+	  doc/i18n/Makefile \
+	  doc/i18n/pt_BR/Makefile \
 	  emx/Makefile \
 	  lib/Makefile \
 	  man/Makefile \
